--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,11 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
-    compile 'com.github.nguyenhoanglam:ImagePicker:1.1.3'
+
+    //compile 'com.github.nguyenhoanglam:ImagePicker:1.1.3' - original
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.esafirm.android-image-picker:imagepicker:1.7.2@aar'
+
     compile 'com.kailashdabhi:om-recorder:1.1.3'
     compile 'com.google.android:flexbox:0.2.6'
     testCompile 'junit:junit:4.12'
